# tarea-1-Paradigmas-2021

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/include/: cliente.h  contenedora.h  habitacion.h  informacion.h  string_util.h  utils.h
source/src/: hotel.c  interfaz.c  memoria.c  source.c  string_util.c  utils.c
